<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/avocado2"
    android:fitsSystemWindows="true">
    <!-- LinearLayout pentru organizarea verticală a elementelor de interfață -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/bmi" />
        <!-- //Logo -->

        <!-- TableLayout pentru organizarea tabulară a elementelor de interfață -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <!-- TableRow pentru introducerea varstei -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/varsta" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editTextAge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/textViewVarsta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ani" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <!-- //Varsta -->


            <!-- TableRow pentru selecția sexului -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sex" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <RadioGroup
                            android:id="@+id/radioGroupGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonGenderMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:checked="true"
                                android:text="@string/masculin" />

                            <RadioButton
                                android:id="@+id/radioButtonGenderFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/feminin" />
                        </RadioGroup>
                    </TableRow>

                </TableLayout>

            </TableRow>
            <!-- //Sex -->

            <!-- TableRow pentru introducerea înălțimii -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/inaltime" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editTextHeightCm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:id="@+id/textViewCm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cm" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <!-- //Inaltime -->


            <!-- TableRow pentru introducerea greutății -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/greutate" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editTextWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:id="@+id/textViewKg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kg" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <!-- //Greutate -->

            <!-- TableRow pentru selecția nivelului de activitate -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nivel_activitate" />

                <Spinner
                    android:id="@+id/spinnerActivityLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_activity_levels" />

            </TableRow>
            <!-- //Nivel activitate -->

            <!-- TableRow pentru selecția obiectivului -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewOb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/obiectiv" />

                <Spinner
                    android:id="@+id/spinnerObiectiv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_obiectiv" />

            </TableRow>
            <!-- //Obiectiv -->

            <!-- TableRow pentru introducerea greutății dorite -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewgd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/greutate_dorita" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editTextWeightt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/textViewKgw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kg" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <!-- //Greutate dorita-->

            <!-- TableRow pentru selecția greutății dorite săptămânal -->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" >

                <TextView
                    android:id="@+id/textViewWeeklyGoalB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_goal" />

                <Spinner
                    android:id="@+id/spinnerWeeklyGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_weekly_goals_kg"
                    />

                <TextView
                    android:id="@+id/textViewKgEachWeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kg_each_week" />

            </TableRow>
            <!-- //Saptamanal -->


            <!-- Button pentru finalizarea înregistrării -->
            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="Let's Go" />
            <!-- //Submit button -->


        </TableLayout>

    </LinearLayout>

</ScrollView>